--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,21 @@
 <resources>
     <string name="app_name">carlos-app</string>
 
+    // Screen names
     <string name="screens_home">Home</string>
     <string name="screens_menuAndOrder">Menu &amp; Order</string>
     <string name="screens_locations">Locations</string>
     <string name="screens_account">Account</string>
 
+    // Login
+    <string name="login">Login</string>
+    <string name="login_hint">Username / E-Mail</string>
+    <string name="password_hint">Password</string>
+
+    // Password field
+    <string name="password_visible_content_description">Hide password</string>
+    <string name="password_hidden_content_description">Show password</string>
+
+    // Errors
     <string name="unexpected_error">An unexpected error occurred.\nPlease try again.</string>
 </resources>
